--- a/lesson-10-data/index.html
+++ b/lesson-10-data/index.html
@@ -131,7 +131,7 @@
             <p>Energy is extremely important, and is the reason you are able to read these words now! This map provides users with the location and capacity of three energy production methods: coal, natural gas, and nuclear power in the United States.</p>
             <p>This map was generated for a weekly assignment in developing our Leaflet programming skills for MAP 672. This map reflects the my continued development of skills including the use of graduated circle markers and complex popups which utilize an external javascript data file.</p>
             <ul>
-                <li>See the map: <a target='_blank' href="#" />U.S. Energy</a>
+                <li>See the map: <a target='_blank' href="https://nicwill0707.github.io/US-energy-production/" />U.S. Energy</a>
                 </li>
 
                 <li>Data source: <a target='_blank' href="http://newmapsplus.uky.edu/" />MAP 672 of the New Maps Plus course (University of Kentucky, Geography Department)</a>
@@ -149,7 +149,7 @@
             <p>This map is a highly practical if your main mission is to find some delicious Mexican food while you are jetpacking around Salt Lake City, Utah. Whether or not this is your mode or travel (or idea of a good time), this map indicates your distance from a fine eatery in the city.</p>
             <p>This map was generated for a weekly assignment in developing our Leaflet programming skills for MAP 672. The relative simplicity of the map hides the fact that it was immensely challenging to build the code which makes this map work. In other words, this map represents a breakthrough in my mapping capabilities!</p>
             <ul>
-                <li>See the map: <a target='_blank' href="#" />The Red Iguana (as the jetpack flies)!</a>
+                <li>See the map: <a target='_blank' href="https://nicwill0707.github.io/rediguana-jetpack/" />The Red Iguana (as the jetpack flies)!</a>
                 </li>
 
                 <li>Data source: <a target='_blank' href="http://newmapsplus.uky.edu/" />MAP 672 of the New Maps Plus course (University of Kentucky, Geography Department)</a>
